--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sliding text</title>
   <link href="./style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,9 +11,124 @@
 </head>
 
 <body>
-  <div id="myDiv"></div>
+  <div class="parent-container">
+    
+  
+  <table>
+    <thead>
+      <tr>
+        <th><span>Platform</span></th>
+        <th><span>Blog Website</span></th>
+        <th><span>Contract Mngt</span></th>
 
-  <script src="./script.js"></script>
+        <!-- ------------------- -->
+        <th><span>CRM</span></th>
+        <th><span>Dashboard<br> Metric Tracking</span></th>
+        <th><span>Database<br> Mngt System</span></th>
+
+        <!-- ------------------- -->
+        <th><span>Document<br> Storage</span></th>
+        <th><span>Email Mrkt</span></th>
+        <th><span>Integration/<br>API Interface</span></th>
+
+
+        <!-- ------------------- -->
+        <th><span>LMS/<br> Student Portal</span></th>
+        <th><span>Live Event Mngt<br> (Events & Tickets)</span></th>
+        <th><span>Membership<br> Site</span></th>
+        <th><span>No-Code<br> App Dev<br></span></th>
+
+        <th><span>Page Builder</span></th>
+
+        <!-- ------------------- -->
+        <th><span>Page Buider</span></th>
+        <th><span>Online Community Mngt</span></th>
+        <th><span>Popup Mrkt<br> Widget</span></th>
+
+        <!-- ------------------- -->
+        <th><span>Project Mngt</span></th>
+        <th><span>Proposal Mngt</span></th>
+        <th><span>Sales Pipeline <br>Mngt</span></th>
+
+
+        <!-- ------------------- -->
+        <th><span>Sales<br>Processing</span></th>
+        <th><span>Self-Scheduler</span></th>
+        <th><span>Survey Mngt</span></th>
+
+        <!-- ------------------- -->
+        <th><span>Video Player/<br>Hosting</span></th>
+        <th><span>Webinar</span></th>
+        <th><span>Website</span></th>
+
+
+        <!-- ------------------- -->
+        <th><span>Website Hosting</span></th>
+        <th class="wide"><span>Trustpilot</span></th>
+        <th class="wide"><span>Capterra</span></th>
+        <!-- ------------------- -->
+
+        <th class="wide"><span>TrustRadius</span></th>
+        <th class="wide"><span>Monthly Total Cost (Plan)</span></th>
+      </tr>
+    </thead>
+
+  </table>
+
+  <!-- -------------------------------------------------- -->
+
+  <table>
+    <thead>
+      <tr>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+
+        <td class="wide">4.9</td>
+        <td class="wide">4.2</td>
+
+        <td class="wide">8.9</td>
+        <td rowspan="2" class="wide">Start at $124
+          </td>
+
+
+      </tr>
+      <tr>
+        <td class="image-stars"><img src="./5stars.png"></td>
+        <td class="image-stars"> <img src="./gold.png"></td>
+
+        <td class="image-stars"><img src="./4stars.png"></td>
+
+
+      </tr>
+    </thead>
+
+  </table>
+</div>
 </body>
 
 </html>
