--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
   <table>
     <thead>
       <tr>
+        <td rowspan="2"><img src="./logo.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
-        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
-        <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
+        <td rowspan="2"><img src="./wrong.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
         <td rowspan="2"><img src="./4436481.png" alt="correct images"/></td>
