--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <td class="wide">4.2</td>
 
         <td class="wide">8.9</td>
-        <td rowspan="2" class="wide">Start at $124
+        <td rowspan="2" class="wide">Start at <br> $124
           </td>
 
 
