--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- ------------------- -->
 
         <th class="wide"><span>TrustRadius</span></th>
-        <th class="wide"><span>Monthly Total Cost (Plan)</span></th>
+        <th class="wide"><span>Monthly Total <br> Cost (Plan)</span></th>
       </tr>
     </thead>
 
